--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<h1>五年成名校，十年超清北</h1>
 		<hr>
 		<p>
-		班级：计科211    姓名：侯进闯 学号：21101010105<br> 
+		班级：计科211    姓名：侯进闯 学号：21101010105 联系方式：17862527689 <br> 
 		</p>
 		<p><img src="img/2.jpg"width="100px">
 		身为四川轻化工的一员，四川轻化工大学（Sichuan University of Science & Engineering）
@@ -67,7 +67,7 @@
 		以渐、国画大师李苦禅、抗日名将张自忠、谔谔国士傅斯年、国学泰斗季羡林、当代保尔张海迪等
 		名人。2023年，被评为三线城市.
 		<p>
-
+		<p>爱好：象棋 篮球 听音乐 看电影 看小说
 		
 		
 	</div>
